gcc/testsuite/rust/rustc/ui/generics/issue-83556.rs
struct Foo<T, 'a>(&'a ());
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

